<resources>
    <!-- menu text -->
    <string name="app_name">PizzaNow</string>
    <string name="menu_about">About</string>
    <string name="menu_language">Language</string>
    <string name="menu_languageEN">English</string>
    <string name="menu_languageFR">Français</string>
    <string name="menu_login">Login</string>
    <string name="menu_help">Help</string>

    <!-- MainActivity text -->
    <string name="welcome_fr">Bienvenue chez PizzaNow!</string>
    <string name="welcome_en">Pizza</string>
    <string name="city_a">Sion</string>
    <string name="city_b">Sierre</string>
    <string name="city_c">Martigny</string>
    <string name="city_d">Viège</string>

    <!-- Fragment info text -->
    <string name="succ_welcome">Welcome to </string>
    <string name="succ_message">Choose your pizza!</string>

    <string name="succ_title_pizza">Pizza</string>
    <string name="succ_title_desc">Description</string>
    <string name="succ_title_price">Price</string>

    <string name="succ_art1_pizza">Margharitha</string>
    <string name="succ_art1_desc">Nature</string>
    <string name="succ_art1_price">12 frs</string>

    <string name="succ_art2_pizza">Tambola</string>
    <string name="succ_art2_desc">Ham</string>
    <string name="succ_art2_price">15 frs</string>

    <!-- FragmentDetail text -->
    <string name="succ_order">Order !</string>
    <string name="succ_orderMessage"> or come direct here</string>

    <string name="succ_orderNames">Employees names </string>
    <string name="succ_orderNamesMessage">are ready to serve you!</string>

    <string name="succ_orderAdress">succAdress</string>

    <!-- AboutActivity text-->
    <string name="about_title">About the app</string>
    <string name="about_version_title">App Version : </string>
    <string name="about_version" translatable="false">0.2</string>
    <string name="about_authors_title">About the authors : </string>
    <string name="about_authors" translatable="false">Nicolas Solioz, Valentin Bornatici</string>
    <string name="about_description_title" translatable="false">Description</string>
    <string name="about_description">Projet du cours de dveloppement mobile sur Android Studio</string>
    <string name="about_TODO_title">To do</string>
    <string name="about_TODO" translatable="false">Affecter le changement de langue, cleaner le code, ajoter la DB,...</string>

    <!-- implémentation automatique lors de la création de l'Activity Settings -->
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>


</resources>
