<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SuccInfoFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/succ_message"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvWelcomeSuccInfo"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/succ_welcome"
                android:textAlignment="center"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/PizzasRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <TableLayout
                android:id="@+id/tableLayout"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="26dp"
                android:orientation="vertical">


                <!-- titres -->
                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="162dp"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_title_pizza"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_title_desc"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="83dp"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_title_price"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </TableRow>

                <!-- Contenu -->
                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal">


                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_art1_pizza" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_art1_desc" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_art1_price" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|fill_horizontal">

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_art2_pizza" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_art2_desc" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/succ_art2_price" />
                </TableRow>


            </TableLayout>
        </LinearLayout>
    </ScrollView>


